# maiocchi-assinaturas

./: .dockerignore  .gitignore  .gitleaks.toml  Dockerfile  PLANO-FUSAO-DOCUSEAL-LACUNA.md  README.md  compose.yml  eslint.config.mjs  next.config.ts  nginx.conf  package-lock.json  package.json  vite.config.ts
.openai/: hosting.json
app/: brand.tsx  error.tsx  flow-map.tsx  glass-system.css  global-error.tsx  globals.css  lawyer-access.tsx  layout.tsx  legal-page.tsx  mermaid-diagram.tsx  not-found.tsx  page-hero.tsx  page.tsx  portal-error-state.tsx  portal-home.tsx  portal-navigation.tsx  site-chrome.tsx
clients/pades-token-agent-cross-platform/: Cargo.toml  README.md
clients/pades-token-agent-cross-platform/assets/: authorize.html  authorize.js
clients/pades-token-agent-cross-platform/packaging/linux/: maiocchi-pades-agent.service
clients/pades-token-agent-cross-platform/scripts/: install-linux.sh  install-windows.ps1  uninstall-linux.sh  uninstall-windows.ps1
clients/pades-token-agent-cross-platform/src/: config.rs  confirmation.rs  error.rs  lib.rs  main.rs  model.rs  web.rs
clients/pades-token-agent-cross-platform/src/provider/: linux.rs  mod.rs  windows.rs
compliance/: README.md  SHA256SUMS
deploy/: docuseal-sso.candidate.yml  docuseal.yml  pki-bridge.yml  portal-sso.candidate.yml  sso-e2e-gateway.candidate.yml  traefik-assinatura.yml
public/: manifest.json  site.webmanifest
scripts/: backup-signature-vps.sh  backup-vps.sh  build-docuseal-sso-candidate.sh  build-portal-sso-candidate.sh  finalize-sso-e2e-evidence.mjs  rollback-vps.sh  (+16 more)
(+296 files in other folders)
